--- a/js_client/index.html
+++ b/js_client/index.html
@@ -8,10 +8,12 @@
     <title>js_client</title>
 </head>
 <body>
-    <form id="login-form">
+    <form id="login-form" method="POST">
         <input type="text" name="username" placeholder="Your username">
         <input type="password" name="password" placeholder="your password">
         <input type="submit" value="login">
     </form>
+
+    <script src="client.js"></script>
 </body>
 </html>
